// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div>
  Viewing 
  0
   expenses totalling
  $0.00
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div>
  Viewing 
  3
   expenses totalling
  $114,195.00
</div>
`;
